docs/v8.2/packages_api/schema/_index.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "@grafana/schema"
keywords = ["grafana","documentation","sdk","@grafana/schema"]
type = "docs"
disable_edit_link = true
+++

## @grafana/schema package

A library containing most of the static shapes required by Grafana.

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [AxisPlacement](./axisplacement/) |  |
|  [GraphDrawStyle](./graphdrawstyle/) |  |
|  [GraphGradientMode](./graphgradientmode/) |  |
|  [LegendDisplayMode](./legenddisplaymode/) |  |
|  [LineInterpolation](./lineinterpolation/) |  |
|  [TableCellDisplayMode](./tablecelldisplaymode/) |  |
|  [TooltipDisplayMode](./tooltipdisplaymode/) |  |
|  [VisibilityMode](./visibilitymode/) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [HideSeriesConfig](./hideseriesconfig/) |  |
|  [LineStyle](./linestyle/) |  |
|  [OptionsWithLegend](./optionswithlegend/) |  |
|  [OptionsWithTextFormatting](./optionswithtextformatting/) |  |
|  [OptionsWithTooltip](./optionswithtooltip/) |  |
|  [PointsConfig](./pointsconfig/) |  |
|  [ScaleDistributionConfig](./scaledistributionconfig/) |  |
|  [TableFieldOptions](./tablefieldoptions/) |  |
|  [VizLegendOptions](./vizlegendoptions/) |  |
|  [VizTextDisplayOptions](./viztextdisplayoptions/) | Explicit control for visualization text settings |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [FieldTextAlignment](./fieldtextalignment/) |  |
|  [LegendPlacement](./legendplacement/) |  |
|  [VizTooltipOptions](./viztooltipoptions/) |  |

