docs/v8.3/packages_api/schema/_index.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "@grafana/schema"
keywords = ["grafana","documentation","sdk","@grafana/schema"]
type = "docs"
disable_edit_link = true
+++

## @grafana/schema package

A library containing most of the static shapes required by Grafana.

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [AxisPlacement](./axisplacement/) |  |
|  [BarAlignment](./baralignment/) |  |
|  [BarGaugeDisplayMode](./bargaugedisplaymode/) |  |
|  [BigValueColorMode](./bigvaluecolormode/) |  |
|  [BigValueGraphMode](./bigvaluegraphmode/) |  |
|  [BigValueJustifyMode](./bigvaluejustifymode/) |  |
|  [BigValueTextMode](./bigvaluetextmode/) |  |
|  [GraphDrawStyle](./graphdrawstyle/) |  |
|  [GraphGradientMode](./graphgradientmode/) |  |
|  [GraphTresholdsStyleMode](./graphtresholdsstylemode/) |  |
|  [LegendDisplayMode](./legenddisplaymode/) |  |
|  [LineInterpolation](./lineinterpolation/) |  |
|  [ScaleDirection](./scaledirection/) |  |
|  [ScaleDistribution](./scaledistribution/) |  |
|  [ScaleOrientation](./scaleorientation/) |  |
|  [StackingMode](./stackingmode/) |  |
|  [TableCellDisplayMode](./tablecelldisplaymode/) |  |
|  [TooltipDisplayMode](./tooltipdisplaymode/) |  |
|  [VisibilityMode](./visibilitymode/) |  |
|  [VizOrientation](./vizorientation/) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AxisConfig](./axisconfig/) |  |
|  [BarConfig](./barconfig/) |  |
|  [FillConfig](./fillconfig/) |  |
|  [GraphFieldConfig](./graphfieldconfig/) |  |
|  [GraphThresholdsStyleConfig](./graphthresholdsstyleconfig/) |  |
|  [HideableFieldConfig](./hideablefieldconfig/) |  |
|  [HideSeriesConfig](./hideseriesconfig/) |  |
|  [LineConfig](./lineconfig/) |  |
|  [LineStyle](./linestyle/) |  |
|  [OptionsWithLegend](./optionswithlegend/) |  |
|  [OptionsWithTextFormatting](./optionswithtextformatting/) |  |
|  [OptionsWithTooltip](./optionswithtooltip/) |  |
|  [PointsConfig](./pointsconfig/) |  |
|  [ReduceDataOptions](./reducedataoptions/) |  |
|  [ScaleDistributionConfig](./scaledistributionconfig/) |  |
|  [SingleStatBaseOptions](./singlestatbaseoptions/) |  |
|  [StackableFieldConfig](./stackablefieldconfig/) |  |
|  [StackingConfig](./stackingconfig/) |  |
|  [TableFieldOptions](./tablefieldoptions/) |  |
|  [TableSortByFieldState](./tablesortbyfieldstate/) |  |
|  [VizLegendOptions](./vizlegendoptions/) |  |
|  [VizTextDisplayOptions](./viztextdisplayoptions/) |  |
|  [VizTooltipOptions](./viztooltipoptions/) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultTableFieldOptions](./defaulttablefieldoptions/) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [FieldTextAlignment](./fieldtextalignment/) |  |
|  [LegendPlacement](./legendplacement/) |  |

